--- a/civ5drafter.css
+++ b/civ5drafter.css
@@ -1,22 +1,23 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 @font-face {
-  font-family: "Montserrat";
+	font-family: "Montserrat";
 }
 
 body {
 	background-color: #282828;
 }
+
 #main {
 	margin: auto;
-    width: 100%;
-    height: 1000px;
+	width: 100%;
+	height: 1000px;
 }
 
 #header {
 	margin: auto;
-    width: 100%;
-    height: 30px;
+	width: 100%;
+	height: 30px;
 }
 
 .headline {
@@ -27,8 +28,8 @@ body {
 }
 
 ul li {
-  	list-style: none;
-  	font-family: Montserrat;
+	list-style: none;
+	font-family: Montserrat;
 	font-size: 15px;
 	left: 100px;
 	color: #ffffff;
@@ -36,19 +37,20 @@ ul li {
 
 }
 
-ul li > label:after, ul li > label:after {
-  	content:":";
+ul li>label:after,
+ul li>label:after {
+	content: ":";
 }
 
 label {
-  	/*display: inline-block;*/
 	text-align: right;
 	width: 200px;
 	font-size: 13px;
 	line-height: 16px;
 }
 
-input, select {
+input,
+select {
 	display: inline-block;
 	background-color: #fff;
 	border: solid 1px #BBC5CE;
@@ -62,8 +64,8 @@ input, select {
 #playerdetails {
 	margin: auto;
 	text-align: center;
-    width: 100%;
-    height: 50px;
+	width: 100%;
+	height: 50px;
 
 }
 
@@ -96,12 +98,12 @@ input, select {
 
 #civilizations td {
 	text-align: left;
-	vertical-align:middle;
+	vertical-align: middle;
 	/*width: 50px;*/
 }
 
 #civilizations img {
-	vertical-align:middle;
+	vertical-align: middle;
 	padding-right: 10px;
 	padding-left: 10px;
 	width: 32px;
@@ -121,21 +123,17 @@ input, select {
 	padding-bottom: 20px;
 	top: 770px;
 	left: 50%;
-    width: 750px;
-    height: 50px;
+	width: 750px;
+	height: 50px;
 	text-align: center;
-}
-
-.nqonlybox {
-	
 }
 
 #buttons {
 	margin: auto;
 	top: 770px;
 	left: 50%;
-    width: 750px;
-    height: 50px;
+	width: 750px;
+	height: 50px;
 	text-align: center;
 }
 
@@ -144,9 +142,9 @@ input, select {
 }
 
 #civilizations label {
-    clear:left;
-    text-align:left;
-    width: 50px;
+	clear: left;
+	text-align: left;
+	width: 50px;
 }
 
 .submitbutton {
@@ -155,7 +153,7 @@ input, select {
 	width: 100px;
 	margin-left: 20px;
 	cursor: pointer;
-	
+
 }
 
 .drafterdropbox {
@@ -170,8 +168,8 @@ input, select {
 	margin: auto;
 	top: 815px;
 	left: 50%;
-    width: 100%;
-    height: 50px;
+	width: 100%;
+	height: 50px;
 	text-align: center;
 }
 
@@ -187,7 +185,7 @@ input, select {
 }
 
 #results img {
-	vertical-align:middle;
+	vertical-align: middle;
 	padding-right: 10px;
 	padding-left: 10px;
 	width: 32px;
@@ -199,8 +197,8 @@ input, select {
 	margin-top: 15px;
 	top: 770px;
 	left: 50%;
-    width: 750px;
-    height: 50px;
+	width: 750px;
+	height: 50px;
 	text-align: center;
 }
 
@@ -214,54 +212,60 @@ input, select {
 
 }
 
-/* .slideThree */
-.slideThree {
-  width: 80px;
-  height: 24px;
-  background: #333;
-  margin: 5px auto;
-  position: relative;
-  border-radius: 50px;
-  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
+/* .forceNQ */
+.forceNQ {
+	width: 80px;
+	height: 24px;
+	background: #333;
+	margin: 5px auto;
+	position: relative;
+	border-radius: 50px;
+	box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
 }
-.slideThree:after {
-  content: 'OFF';
-  color: #000;
-  position: absolute;
-  right: 10px;
-  z-index: 0;
-  font: 12px/26px Arial, sans-serif;
-  font-weight: bold;
-  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.15);
+
+.forceNQ:after {
+	content: 'OFF';
+	color: #000;
+	position: absolute;
+	right: 10px;
+	z-index: 0;
+	font: 12px/26px Arial, sans-serif;
+	font-weight: bold;
+	text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.15);
 }
-.slideThree:before {
-  content: 'ON';
-  color: #27ae60;
-  position: absolute;
-  left: 10px;
-  z-index: 0;
-  font: 12px/26px Arial, sans-serif;
-  font-weight: bold;
+
+.forceNQ:before {
+	content: 'ON';
+	color: #27ae60;
+	position: absolute;
+	left: 10px;
+	z-index: 0;
+	font: 12px/26px Arial, sans-serif;
+	font-weight: bold;
 }
-.slideThree label {
-  display: block;
-  width: 34px;
-  height: 20px;
-  cursor: pointer;
-  position: absolute;
-  top: 3px;
-  left: 3px;
-  z-index: 1;
-  background: #fcfff4;
-  background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-  border-radius: 50px;
-  transition: all 0.4s ease;
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+
+.forceNQ label {
+	display: block;
+	width: 34px;
+	height: 20px;
+	cursor: pointer;
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	z-index: 1;
+	background: #fcfff4;
+	background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	border-radius: 50px;
+	transition: all 0.4s ease;
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
 }
-.slideThree input[type=checkbox] {
-  visibility: hidden;
+
+.forceNQ input[type=checkbox] {
+	visibility: hidden;
 }
-.slideThree input[type=checkbox]:checked + label {
-  left: 43px;
+
+.forceNQ input[type=checkbox]:checked+label {
+	left: 43px;
 }
-/* end .slideThree */
+
+/* end .forceNQ */
